--- a/practice.cabal
+++ b/practice.cabal
@@ -56,7 +56,7 @@ common warnings
 library
     -- Import common warning flags.
     import:           warnings
-    exposed-modules: Forth, Counting
+    exposed-modules: Forth, ForthV2, Counting
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
@@ -70,6 +70,7 @@ library
         , text
         , unordered-containers
         , containers
+        , transformers
 
     -- Directories containing source files.
     hs-source-dirs:   lib
